attempt to make into library

--- a/net/views/test.html
+++ b/net/views/test.html
@@ -18,7 +18,7 @@
         // called when the client connects
         function onConnect() {
             console.log("onConnect");
-            client.subscribe("test");
+            client.subscribe("messages");
         }
 
         // called when the client loses its connection
